--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>template</title>
   </head>
   <body>
-    <i class="fa-solid fa-360-degrees"></i>
+    <h1>hello world</h1>
     <script src="script.js"></script>
   </body>
 </html>
