--- a/index.html
+++ b/index.html
@@ -17,10 +17,30 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>template</title>
+    <title>quote generator</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <div class="quote-container" id="quote-container">
+      <!-- quote -->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote">Loading</span>
+      </div>
+      <!-- author -->
+
+      <div class="quote-author">
+        <span id="author">Loading</span>
+      </div>
+
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet this!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
+    </div>
+
+    <script src="quotes.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
